# udept

./: ChangeLog  ChangeLog.20060126  Makefile.am  Makefile.in  configure  configure.ac
completion/: Makefile.am  Makefile.in  dep.completion.in
doc/: Makefile.am  Makefile.in  dep.1  depman.sh
packaging/: Makefile.am  Makefile.in  udept.ebuild.in
src/: Makefile.am  Makefile.in
